Fix bullets + add spacing

--- a/app/frontend/http_serve/assets/css/pages/_speaker.sass
+++ b/app/frontend/http_serve/assets/css/pages/_speaker.sass
@@ -32,6 +32,14 @@ $speaker-gap-width : 16px
   h2, .speaker-date
     border-bottom: 1px dotted $main-light-blue
 
+  ol
+    margin-left: 1em
+    margin-bottom: 1em
+    
+    li
+      margin-bottom: 0.3em
+      list-style-type: square
+        
   .speaker-date
     padding: 12px $speaker-gap-width
     margin-bottom: 16px
@@ -41,4 +49,4 @@ $speaker-gap-width : 16px
     padding-left: $speaker-gap-width
 
     p
-      margin-bottom: 0.6em
+      margin-bottom: 1em
